# MedRoute-

./: .env.docker  .gitattributes  .gitignore  README.md  docker-compose.yml  run_evaluation.py
.claude/: settings.local.json
chatbot_api/: Dockerfile  pyproject.toml
chatbot_api/src/: entrypoint.sh  llm_caller.py  main.py
chatbot_api/src/agents/: medical_rag_agent.py
chatbot_api/src/chains/: medical_cypher_chain.py
chatbot_api/src/data/: medical_facts.json
chatbot_api/src/ingest/: __init__.py  document_chunks.py  ingest_pipeline.py  pdf_ingest.py  quality.py
chatbot_api/src/models/: ingest_job.py  medical_rag_query.py
chatbot_api/src/retrieval/: __init__.py  hybrid_retriever.py  router_policy.py
chatbot_api/src/services/: medical_knowledge_service.py
chatbot_api/src/utils/: fallback_reasoning.py  graph_utils.py  response_policy.py
chatbot_frontend/: Dockerfile  pyproject.toml
chatbot_frontend/src/: entrypoint.sh  main.py
chatbot_frontend/src/.streamlit/: config.toml
medical_neo4j_etl/: Dockerfile  pyproject.toml
medical_neo4j_etl/src/: bulk_csv_writer.py  dedupe_csvs.py  entrypoint.sh
medical_neo4j_etl/src/data/: disease_precaution.csv  disease_symptom.csv  diseases.csv  precautions.csv  symptoms.csv
scripts/: docker-up.ps1
tests/: run_route_eval_60.py  test_hybrid_retriever_router.py  test_medical_knowledge_service.py  test_no_info_suppression.py
tests/eval/: medroute_eval_60.json  pubmedqa_route_golden_60.json
