[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.109.0",
    "langchain==0.1.0",
    "ollama",
    "fastembed",
    "langchain-community==0.0.20",
    "neo4j",
    "pypdf==3.16.0",
    "python-multipart",
    "langchainhub",
    "numpy",
    "rank-bm25",
    "opentelemetry-api==1.22.0",
    "pydantic>=2.13.0",
    "uvicorn==0.25.0"
]

[project.optional-dependencies]
dev = ["black", "flake8"]
